# graphit

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
apps/: astar.gt  bc.gt  bc_par_for.gt  bc_with_functor.gt  bfs.gt  cc.gt  cc_lp_pj.gt  cc_pjump.gt  closeness_centrality_weighted.gt  closeness_unweighted_par_for.gt  hyperbc.gt  hyperbfs.gt  hyperkcore.gt  hypermis.gt  hyperpagerank.gt  hypersssp.gt  k_core.gt  pagerank.gt  pagerank_delta_export.gt  pagerankdelta.gt  ppsp_delta_stepping.gt  set_cover.gt  set_cover_extern.cpp  sssp.gt  sssp_delta_stepping.gt  tc.gt
apps/experiments/: 2D_arrays.gt  closeness_centrality_unweighted.gt  ipnsw.gt
autotune/: README.md  cmd.sh  compile_gpu.sh  graphit_autotuner.py  graphit_gpu_autotuner.py  graphitc.py  pagerank_parallel_numa_tune.py  pagerank_serial_tune.py  pagerank_tune.py  run.sh
autotune/apps/: bfs_benchmark.gt  cc_benchmark.gt  cf_benchmark.gt  pagerank_benchmark.gt  pagerank_benchmark.gt~  pagerank_delta_benchmark.gt  ppsp_delta_stepping.gt  sssp_benchmark.gt  sssp_delta_stepping.gt
autotune/default_schedules/: pagerank_delta_default_schedule.gt  pagerank_delta_default_schedule.gt~
autotune/gpu_apps/: bfs.gt  cc.gt  pagerank.gt  sssp_delta_stepping.gt
autotune/schedules/: bfs_default_schedule.gt  cf_default_schedule.gt  default_schedule.gt
graphit_eval/: ._Devcloud_evaluation.md  Devcloud_evaluation.md  GraphIt_Evaluation_Guide.md  README.md  artifact_eval_overview.md  performance_script_guide.md
graphit_eval/dataset1_eval/: cc_bitvec
graphit_eval/g2_cgo2021_eval/: .gitignore  README.md  gen_fig3.py  gen_table7.py
graphit_eval/pagerankdelta_example/: README.md  compile_pagerankdelta_fig6.py
graphit_eval/priority_graph_cgo2020_eval/: readme.md
hypergraph/: hygra-rand-small.el  hyperAdjToKONECT  hyperAdjToKONECT.cpp  hyperAdjtoEL.py  output-parser.py
hypergraph/benchmark/: run-bc.sh  run-bfs.sh  run-kcore.sh  run-pr.sh  run-sssp.sh
include/graphit/: frontend.h  parser.h  scanner.h
src/: default_schedule.cpp  graphitc.py  library_test_driver_cf_cpp.txt  library_test_driver_weighted_cpp.txt  main.cpp
src/backend/: backend.cpp  codegen_c++.cpp  codegen_cpp.cpp  codegen_python.cpp  codegen_swarm.cpp  gen_edge_apply_func_decl.cpp  mir.cpp  mir_visitor.cpp
src/frontend/: CMakeLists.txt  clone_apply_node_vistor.cpp  clone_for_stmt_node_vistor.cpp  clone_loop_body_visitor.cpp  error.cpp  fir.cpp  fir_printer.cpp  fir_visitor.cpp  frontend.cpp  high_level_schedule.cpp  low_level_schedule.cpp  mir_emitter.cpp  parser.cpp  scanner.cpp  schedule.cpp  token.cpp
src/midend/: apply_expr_lower.cpp  atomics_op_lower.cpp  change_tracking_lower.cpp  frontier_dedup_lower.cpp  frontier_reuse_analysis.cpp  gpu_change_tracking_lower.cpp  gpu_priority_features_lowering.cpp  gpu_vector_field_properties_analyzer.cpp  intersection_expr_lower.cpp  lower_physical_data_layout.cpp  merge_reduce_lower.cpp  midend.cpp  mir.cpp  mir_context.cpp  mir_emitter.cpp  mir_lower.cpp  mir_printer.cpp  mir_rewriter.cpp  mir_visitor.cpp  par_for_lower.cpp  physical_data_layout_lower.cpp  priority_features_lowering.cpp  program_context.cpp  swarm_frontier_convert.cpp  swarm_opt_lower.cpp  swarm_priority_features_lowering.cpp  udf_dup.cpp  vector_field_properties_analyzer.cpp  vector_op_lower.cpp  vertex_edge_set_lower.cpp  while_loop_fusion.cpp
src/python/: graphit.py
src/runtime_lib/: builtins_gunrock.h  edgeset_apply_functions.h  gpu_intrinsics.h  graphit_timer.h  intrinsics.h  segmentgraph.h  sssp.cu  swarm_intrinsics.h  vertexsubset.h
src/utils/: exec_cmd.cpp  util.cpp
test/c++/: backend_test.cpp  frontend_test.cpp  high_level_schedule_test.cpp  high_level_schedule_test.cpp.cpp  low_level_schedule_test.cpp  midend_test.cpp  relabel_verifier.h  runtime_lib_test.cpp  test.cpp
test/gpu_tests/: all_gpu_tests.py  runtime_lib_tests.py
test/graphs/: 4.mtx  4_sym.el  mst_special_case.wel  rMatGraph_J_5_100.el  rmat10.el  test.el  test.wel  test2.wel  test_cf.wel  test_closeness_sssp.wel  test_sym.el
test/gtest/: gtest-all.cc
test/input/: argv_safe.gt  astar.gt  astar_distance_loader.cpp  astar_distance_loader.gt  astar_example.gt  astar_functor.gt  bc.gt  bc_functor.gt  bellman_ford_simplified.gt  bfs.gt  bfs_with_filename_arg.gt  cc.gt  cc_pjump.gt  cf.gt  closeness_centrality.gt  closeness_centrality_unweighted.gt  closeness_centrality_unweighted_for_testing.gt  closeness_centrality_unweighted_functor.gt  closeness_centrality_unweighted_functor_parallel_for.gt  closeness_centrality_weighted.gt  closeness_centrality_weighted_for_testing.gt  closeness_centrality_weighted_functor.gt  const_vector_global.gt  constant_vector.gt  delta_stepping.gt  eigenvector_centrality.gt  export_cf_vector_input_with_return.gt  export_constant_size_vector_of_vector_return.gt  export_constant_size_vector_return.gt  export_extern_simple_edgeset_appply.gt  export_pagerank_delta.gt  export_pagerank_delta_UW.gt  export_pagerank_with_vector_input.gt  export_pr.gt  export_pr_delta.gt  export_pr_with_return.gt  export_simple_edgeset_apply.gt  export_sssp.gt  export_various_types_vector_arg.gt  export_vector_of_constant_size_arg.gt  (+82 more)
test/input_with_schedules/: SparsePush_VertexParallel_Delta2.gt  bc_ParForSparsePushDensePull_bitvector.gt  bc_SparsePush.gt  bfs_benchmark.gt  bfs_hybrid_dense_parallel_cas.gt  bfs_hybrid_dense_parallel_cas_segment.gt  bfs_pull_edge_aware_parallel.gt  bfs_pull_parallel.gt  bfs_pull_parallel_segment.gt  bfs_push_parallel_cas.gt  bfs_push_sliding_queue_parallel_cas.gt  cc_benchmark.gt  cc_benchmark_cache.gt  cc_hybrid_dense_parallel_bitvector.gt  cc_hybrid_dense_parallel_bitvector_numa.gt  cc_hybrid_dense_parallel_bitvector_segment.gt  cc_hybrid_dense_parallel_cas.gt  cc_pull_parallel.gt  cc_pull_parallel_numa.gt  cc_pull_parallel_segment.gt  cc_push_parallel_cas.gt  cf_benchmark.gt  cf_benchmark_cache.gt  cf_pull_parallel.gt  cf_pull_parallel_load_balance.gt  cf_pull_parallel_load_balance_segment.gt  cf_pull_parallel_segment.gt  closeness_centrality_unweighted_parallel_for_hybrid_parallel.gt  eigenvector_pr_fusion.gt  (+49 more)
(+460 files in other folders)
